added firebase support

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.21.1",
     "emotion-theming": "^11.0.0",
     "facepaint": "^1.2.1",
+    "firebase": "^8.9.1",
     "history": "4.7.2",
     "imagesloaded": "^4.1.4",
     "immutability-helper": "^3.1.1",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "26.6.0",
     "moxios": "^0.4.0",
     "normalize.css": "^8.0.1",
